--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js --open",
+    "start": "webpack --config webpack.dev.js  --watch",
     "hot": "webpack-dev-server --config webpack.dev.js --hotOnly --open",
     "build": "webpack -p --config webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1",
